--- a/src/main/resources/templates/reservierung/retournieren-reservierung.html
+++ b/src/main/resources/templates/reservierung/retournieren-reservierung.html
@@ -54,7 +54,7 @@
                     <p>Reservierungsnummer:</p>
                 </div>
                 <div class="col">
-                    <p th:text="${abholung.reservierung_nr}"></p>
+                    <p th:text="${abholung.id}"></p>
                 </div>
             </div>
             <div class="row">
